title: fix spacing
The SNHDSA spacing was a bit too large and caused the rest of the
elements to the right to stack, when shrunken.

--- a/_sass/snh-dsa/text.scss
+++ b/_sass/snh-dsa/text.scss
@@ -1,5 +1,5 @@
 /* header title override style, makes the chapter name larger and responsive */
 .title {
-  font-size: 1.66rem;
+  font-size: 1.4rem;
   white-space: wrap;
 }
